# snowflake-native-app-streamlit-deploy

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  dev-requirements.txt  local_test_env.yml  pyproject.toml  requirements.txt  snowflake.yml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/common-setup/: action.yml
.github/actions/create-version/: action.yml
.github/workflows/: checks.yml  deploy-to-sandbox.yml  main.yml
nativeapp/: snowflake.yml
nativeapp/src/module-add/src/main/python/: add.py
nativeapp/src/module-add/src/test/python/: test_add.py
nativeapp/src/module-ui/src/: ui.py
nativeapp/src/module-ui/test/: test_ui.py
output/deploy/: README.md  manifest.yml  setup_script.sql
output/deploy/module-add/: add.py
output/deploy/streamlit/: environment.yml  ui.py
